# embedded_sliding_puzzle

./: README.md  grid.cl
Android-Slider-Puzzle-master/Android-Slider-Puzzle-master/: build.gradle
Android-Slider-Puzzle-master/Android-Slider-Puzzle-master/app/: build.gradle
Android-Slider-Puzzle-master/Android-Slider-Puzzle-master/app/src/main/: AndroidManifest.xml
Android-Slider-Puzzle-master/Android-Slider-Puzzle-master/app/src/main/java/vivek/com/sliddingpuzzle/: GameSetting.java  MainActivity.java
Android-Slider-Puzzle-master/Android-Slider-Puzzle-master/app/src/main/java/vivek/com/sliddingpuzzle/model/: TileItem.java
Android-Slider-Puzzle-master/Android-Slider-Puzzle-master/app/src/main/java/vivek/com/sliddingpuzzle/utils/: BitmapSplitter.java
Android-Slider-Puzzle-master/Android-Slider-Puzzle-master/app/src/main/jni/: Android.mk  Application.mk  ButtonDriver.c  CLDriver.c  CMakeLists.txt  LEDDriver.c  Segment.c
Android-Slider-Puzzle-master/Android-Slider-Puzzle-master/app/src/main/res/layout/: activity_main.xml  game_setting.xml
